--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -4,55 +4,86 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/violet"
     tools:context=".MainActivity4">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="366dp"
-        android:layout_height="61dp"
-        android:text="¿Qué es una clase?  Una clase es una plantilla que define la estructura de un objeto. Define las propiedades y métodos que tendrá el objeto. "
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="36dp" />
+        android:id="@+id/textView10"
+        android:layout_width="353dp"
+        android:layout_height="81dp"
+        android:text="¿Qué es un atributo?  Un atributo es una variable que pertenece a un objeto. Representa una característica o propiedad del objeto. Los atributos se utilizan para almacenar datos que están asociados con el objeto."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.931"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.869" />
 
     <TextView
-        android:id="@+id/textView10"
-        android:layout_width="370dp"
-        android:layout_height="75dp"
-        android:text="¿Qué es un atributo?  Un atributo es una variable que pertenece a un objeto. Representa una característica o propiedad del objeto. Los atributos se utilizan para almacenar datos que están asociados con el objeto."
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="563dp" />
+        android:id="@+id/textView"
+        android:layout_width="352dp"
+        android:layout_height="61dp"
+        android:text="¿Qué es una clase?  Una clase es una plantilla que define la estructura de un objeto. Define las propiedades y métodos que tendrá el objeto. "
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"
+        app:layout_constraintVertical_bias="0.055" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="346dp"
+        android:layout_height="108dp"
+        android:text="Qué es un método?  Un método es una unidad de código que realiza una tarea específica. Los métodos pueden tomar parámetros y retornar valores. Los métodos se utilizan para encapsular el comportamiento y promover la reutilización del código."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.246"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"
+        app:layout_constraintVertical_bias="0.701" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="336dp"
+        android:layout_height="64dp"
+        android:text="¿Qué significa void?   Se utiliza para indicar que un método no retorna ningún valor. "
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.346"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"
+        app:layout_constraintVertical_bias="0.176" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="341dp"
+        android:layout_height="116dp"
+        android:text="¿Qué hace el constructor?  La función principal del constructor es inicializar el estado del objeto. Esto incluye establecer los valores iniciales de las propiedades del objeto. Los constructores también pueden realizar otras tareas, como validar el estado del objeto o realizar acciones que se requieren antes de que el objeto pueda ser utilizado."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.242"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"
+        app:layout_constraintVertical_bias="0.499" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="314dp"
         android:layout_height="100dp"
         android:text="¿Qué valor puede retornar un constructor?  Un constructor no puede retornar ningún valor. Esto se debe a que un constructor es responsable de inicializar un objeto, y no tiene sentido que un objeto retorne un valor antes de haber sido inicializado por completo."
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="193dp" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="368dp"
-        android:layout_height="95dp"
-        android:text="Qué es un método?  Un método es una unidad de código que realiza una tarea específica. Los métodos pueden tomar parámetros y retornar valores. Los métodos se utilizan para encapsular el comportamiento y promover la reutilización del código."
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="447dp" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="354dp"
-        android:layout_height="118dp"
-        android:text="¿Qué hace el constructor?  La función principal del constructor es inicializar el estado del objeto. Esto incluye establecer los valores iniciales de las propiedades del objeto. Los constructores también pueden realizar otras tareas, como validar el estado del objeto o realizar acciones que se requieren antes de que el objeto pueda ser utilizado."
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="315dp" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="362dp"
-        android:layout_height="58dp"
-        android:text="¿Qué significa void?  En programación, void significa &quot;vacío&quot;. Se utiliza para indicar que un método no retorna ningún valor. "
-        tools:layout_editor_absoluteX="12dp"
-        tools:layout_editor_absoluteY="111dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.175"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"
+        app:layout_constraintVertical_bias="0.31" />
 
     <Button
         android:id="@+id/vOLVER"
@@ -62,6 +93,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.94"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintVertical_bias="0.976" />
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="142dp"
+        android:layout_height="57dp"
+        android:text="Pagina anterior"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.088"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.976" />
